crates/sql-orm/tests/ui/entity_missing_primary_key.rs
use sql_orm::prelude::*;

#[derive(Entity)]
pub struct AuditLog {
    pub message: String,
}

fn main() {}
